--- a/practicas/Practica05-CV/index.html
+++ b/practicas/Practica05-CV/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currículum Vitae - Juan Pérez | Web UI Developer</title>
+  <title>Currículum Vitae - Christopher Mora | Web UI Developer</title>
   <meta name="description" content="Currículum profesional en desarrollo web UI especializado en HTML, CSS y JavaScript. Experiencia, proyectos, educación y portafolio.">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -18,11 +18,7 @@
         <ul class="aside-list">
           <li>
             <b>Ingeniería en Sistemas Computacionales</b>
-            <span>UAM | 2017</span>
-          </li>
-          <li>
-            <b>Diplomado en UI/UX</b>
-            <span>Platzi | 2022</span>
+            <span>TSJ | 2027</span>
           </li>
         </ul>
       </section>
@@ -45,11 +41,11 @@
         <h2>Language</h2>
         <div class="language-charts">
           <div class="language-chart" data-percent="95">
-            <span class="lang-percent">0%</span>
+            <span class="lang-percent">100%</span>
             <span class="lang-label">ENGLISH</span>
           </div>
           <div class="language-chart" data-percent="70">
-            <span class="lang-percent">0%</span>
+            <span class="lang-percent">100%</span>
             <span class="lang-label">SPANISH</span>
           </div>
         </div>
@@ -59,16 +55,16 @@
     <main>
       <header>
         <div>
-          <h1>Juan Pérez</h1>
+          <h1>Christopher Mora</h1>
           <h2 class="job-title">UI Developer | Desarrollador Web</h2>
           <p class="profile-summary">
             Desarrollador web UI con más de 7 años de experiencia creando interfaces modernas, accesibles y responsivas. Apasionado por la experiencia de usuario y la optimización web.
           </p>
         </div>
         <address>
-          <p>📍 Ciudad de México, México</p>
+          <p>📍 Guadalajara, México</p>
           <p>✉️ <a href="mailto:juan.perez@email.com">juan.perez@email.com</a></p>
-          <p>📞 +52 55 1234 5678</p>
+          <p>📞 +52 33 2234 0422</p>
           <p>
             <a href="https://linkedin.com/in/juanperezdev" target="_blank">LinkedIn</a> |
             <a href="https://github.com/juanperezdev" target="_blank">GitHub</a> |
@@ -80,60 +76,21 @@
       <section>
         <h2>Work Experience</h2>
         <div class="job-card">
-          <h3>Senior UI Developer</h3>
-          <span>Tech Solutions MX | 2021 - Actual</span>
+          <h3>Soporte IT</h3>
+          <span>Toka Call | 2024 - Actual</span>
           <ul>
-            <li>Diseño y desarrollo de interfaces para e-commerce y SaaS</li>
-            <li>Liderazgo técnico de equipo frontend</li>
+            <li>Soporte Tecnico por llamada o de forma remota.</li>
           </ul>
         </div>
-        <div class="job-card">
-          <h3>Frontend Developer</h3>
-          <span>Digital Creatives | 2018 - 2021</span>
-          <ul>
-            <li>Optimización SEO y accesibilidad web</li>
-            <li>Desarrollo de componentes interactivos en React y Vue</li>
-          </ul>
         </div>
       </section>
 
       <section>
         <h2>Certificaciones</h2>
-        <div class="card-grid">
-          <div class="study-card">
-            <h3>Scrum Master Certified</h3>
-            <span class="study-year">2023</span>
-          </div>
-          <div class="study-card">
-            <h3>Google Mobile UX Design</h3>
-            <span class="study-year">2022</span>
-          </div>
-          <div class="study-card">
-            <h3>React Developer Certificate</h3>
-            <span class="study-year">2021</span>
-          </div>
-        </div>
       </section>
 
       <section>
         <h2>Portafolio de Proyectos</h2>
-        <div class="card-grid">
-          <div class="portfolio-card">
-            <h3>E-commerce App</h3>
-            <p>App de compras construida con React y Node.js.</p>
-            <a href="https://ecommerce-app-demo.com" target="_blank">Ver Repositorio</a>
-          </div>
-          <div class="portfolio-card">
-            <h3>UI Library</h3>
-            <p>Librería de componentes accesibles para proyectos internacionales.</p>
-            <a href="https://ui-library-open.com" target="_blank">Ver Repositorio</a>
-          </div>
-          <div class="portfolio-card">
-            <h3>Landing Freelancer</h3>
-            <p>Sitio personal con animaciones CSS y despliegue en Github Pages.</p>
-            <a href="https://juanperezdev.com" target="_blank">Ver Portafolio</a>
-          </div>
-        </div>
       </section>
 
     </main>
